src/objects/TroublePart__c.object
<CustomObject>
    <description>大客户（腾讯）接口同步过来的故障备件信息</description>
    <fields>
        <fullName>PartType__c</fullName>
        <label>PartType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>troublePartSN__c</fullName>
        <label>troublePartSN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>troublePartSlot__c</fullName>
        <label>troublePartSlot</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>workorder__c</fullName>
        <label>workorder</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>TroublePart</relationshipLabel>
        <relationshipName>TroublePartWorkorder</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>TroublePart</label>
    <nameField>
        <label>troublePartPN</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>